@@ -1,3 +1,8 @@
+2-27-2025
+- direnv seperated into its own module
+- removed the stupid warning message from direnv
+
+
 2-23-2025
 - Fixed keymap to not interfere with games
 - updated home-manager module option names
